// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/actionbuttonv2 > should render 1`] = `
<button
  aria-label="title"
  className="___1upyeea_1vqg359 fxugw4r f5ogflp f1hqa2wf f1f09k3d finvdd3 fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1aperda f1lxtadh f5q2cvs frvgh55 fq4mcun f22iagw f122n59 f4d9j23 f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 fyed02w f1khijdr fgvv10z f1i0s6qd fl9jxyw f2qe6v f1iddvxj ffn9jkt fzx4oa f1673y05 ft4r0y4 fr74wqx f1la9fky fkzlvyg f1knas48 f29t7yr f8491dx f1h8061f f19bht5e f19mcgi4"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  tabIndex={0}
>
  <svg
    fill="none"
    height="14"
    viewBox="0 0 14 14"
    width="14"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.65625 6.34375H14V7.65625H7.65625V14H6.34375V7.65625H0V6.34375H6.34375V0H7.65625V6.34375Z"
      fill="#0078D4"
    />
  </svg>
</button>
`;

exports[`lib/actionbuttonv2 > should render disabled 1`] = `
<button
  aria-label="title"
  className="___1upyeea_1vqg359 fxugw4r f5ogflp f1hqa2wf f1f09k3d finvdd3 fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1aperda f1lxtadh f5q2cvs frvgh55 fq4mcun f22iagw f122n59 f4d9j23 f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 fyed02w f1khijdr fgvv10z f1i0s6qd fl9jxyw f2qe6v f1iddvxj ffn9jkt fzx4oa f1673y05 ft4r0y4 fr74wqx f1la9fky fkzlvyg f1knas48 f29t7yr f8491dx f1h8061f f19bht5e f19mcgi4"
  disabled={true}
  onBlur={[Function]}
  onFocus={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  tabIndex={0}
>
  <svg
    fill="none"
    height="14"
    viewBox="0 0 14 14"
    width="14"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.65625 6.34375H14V7.65625H7.65625V14H6.34375V7.65625H0V6.34375H6.34375V0H7.65625V6.34375Z"
      fill="#0078D4"
    />
  </svg>
</button>
`;

exports[`lib/actionbuttonv2 > should render with a CSS class 1`] = `
<button
  aria-label="title"
  className="class-name ___1upyeea_1vqg359 fxugw4r f5ogflp f1hqa2wf f1f09k3d finvdd3 fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1aperda f1lxtadh f5q2cvs frvgh55 fq4mcun f22iagw f122n59 f4d9j23 f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 fyed02w f1khijdr fgvv10z f1i0s6qd fl9jxyw f2qe6v f1iddvxj ffn9jkt fzx4oa f1673y05 ft4r0y4 fr74wqx f1la9fky fkzlvyg f1knas48 f29t7yr f8491dx f1h8061f f19bht5e f19mcgi4"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  tabIndex={0}
>
  <svg
    fill="none"
    height="14"
    viewBox="0 0 14 14"
    width="14"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.65625 6.34375H14V7.65625H7.65625V14H6.34375V7.65625H0V6.34375H6.34375V0H7.65625V6.34375Z"
      fill="#0078D4"
    />
  </svg>
</button>
`;

exports[`lib/actionbuttonv2 > should render with a ref 1`] = `
<button
  aria-label="title"
  className="___1upyeea_1vqg359 fxugw4r f5ogflp f1hqa2wf f1f09k3d finvdd3 fzkkow9 fcdblym fg706s2 fjik90z fj3muxo f1akhkt f1aperda f1lxtadh f5q2cvs frvgh55 fq4mcun f22iagw f122n59 f4d9j23 f1nbblvp fifp7yv f1ov4xf1 f1asdtw4 fyed02w f1khijdr fgvv10z f1i0s6qd fl9jxyw f2qe6v f1iddvxj ffn9jkt fzx4oa f1673y05 ft4r0y4 fr74wqx f1la9fky fkzlvyg f1knas48 f29t7yr f8491dx f1h8061f f19bht5e f19mcgi4"
  disabled={false}
  onBlur={[Function]}
  onFocus={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  tabIndex={0}
>
  <svg
    fill="none"
    height="14"
    viewBox="0 0 14 14"
    width="14"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.65625 6.34375H14V7.65625H7.65625V14H6.34375V7.65625H0V6.34375H6.34375V0H7.65625V6.34375Z"
      fill="#0078D4"
    />
  </svg>
</button>
`;
